rust/codec-html/src/snapshots/decode_html_fragments@strikeout.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 635
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/strikeout.html
---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Strikeout",
        "content": [
          "deleted"
        ]
      },
      " text."
    ]
  }
]
