rust/codec-html/src/snapshots/decode_html_fragments@strong.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/strong.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Strong",
        "content": [
          "strongly"
        ]
      },
      " emphasized word."
    ]
  }
]
