rust/codec-html/src/snapshots/decode_html_fragments@subscript.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/subscript.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "Subscripts like H",
      {
        "type": "Subscript",
        "content": [
          "2"
        ]
      },
      "0."
    ]
  }
]
