rust/codec-html/src/snapshots/decode_html_fragments@superscript.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/superscript.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "Superscripts like CO",
      {
        "type": "Superscript",
        "content": [
          "2"
        ]
      },
      "."
    ]
  }
]
