rust/codec-html/src/snapshots/decode_html_fragments@thematic-break.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/thematic-break.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "First theme."
    ]
  },
  {
    "type": "ThematicBreak"
  },
  {
    "type": "Paragraph",
    "content": [
      "Second theme."
    ]
  },
  {
    "type": "ThematicBreak"
  },
  {
    "type": "Paragraph",
    "content": [
      "Third theme."
    ]
  }
]
