rust/codec-html/src/snapshots/decode_html_fragments@underline.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 635
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/underline.html
---
[
  {
    "type": "Paragraph",
    "content": [
      "Underlined text like ",
      {
        "type": "Underline",
        "content": [
          "this"
        ]
      }
    ]
  }
]
