rust/codec-html/src/snapshots/encode_html_fragments@audio.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 552
expression: encoded
input_file: fixtures/fragments/html/audio.html
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
        <span>
        </span>
        <audio itemtype="https://schema.org/AudioObject" itemscope controls src="audio.mp3">
        </audio>
      </p>
    </div>
  </article>
</stencila-article>
