rust/codec-html/src/snapshots/encode_html_fragments@code-block.html.snap
---
source: rust/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/code-block.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <stencila-code-block itemtype="http://schema.stenci.la/CodeBlock" itemscope>
      <pre slot="text">
        <code itemprop="text">Code with no language</code>
      </pre>
    </stencila-code-block>
    <stencila-code-block itemtype="http://schema.stenci.la/CodeBlock" itemscope programming-language="python">
      <meta itemprop="programmingLanguage" content="python"/>
      <pre slot="text">
        <code itemprop="text" class="language-python"># Some Python code
1 + 1</code>
      </pre>
    </stencila-code-block>
  </div>
</article>
