rust/codec-html/src/snapshots/encode_html_fragments@code-fragment.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 455
expression: encoded
input_file: fixtures/fragments/html/code-fragment.html

---
<article data-root itemtype="https://schema.org/Article" itemscope>
  <stencila-document-toolbar>
  </stencila-document-toolbar>
  <div data-prop="content">
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>Some</span>
      <stencila-code-fragment itemtype="https://schema.stenci.la/CodeFragment" itemscope>
        <code itemprop="text" slot="text">code</code>
      </stencila-code-fragment>
      <span>in a paragraph.</span>
    </p>
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>With a language</span>
      <stencila-code-fragment itemtype="https://schema.stenci.la/CodeFragment" itemscope programming-language="python">
        <meta itemprop="programmingLanguage" content="python"/>
        <code itemprop="text" slot="text" class="language-python">1 + 1</code>
      </stencila-code-fragment>
      <span>specified.</span>
    </p>
  </div>
</article>
